@@ -1,6 +1,7 @@
 * text=auto !eol
 /ChangeLog -text
 /FloodCheck.c -text
+/Helpers.c -text
 /LICENSE -text
 /Makefile.in -text
 /OnJoinBot.c -text
